# ChangeLog for dev-python/python-iptables
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-iptables/ChangeLog,v 1.7 2014/04/01 17:39:39 chutzpah Exp $

*python-iptables-0.3.0_p20130331 (01 Apr 2014)

  01 Apr 2014; Patrick McLean <chutzpah@gentoo.org>
  +python-iptables-0.3.0_p20130331.ebuild:
  Version bump to snapshot version since there are a lot of fixes and upstream
  is slow about releases.

*python-iptables-0.3.0-r3 (24 Feb 2014)

  24 Feb 2014; Tim Harder <radhermit@gentoo.org>
  -python-iptables-0.3.0-r2.ebuild, +python-iptables-0.3.0-r3.ebuild,
  files/python-iptables-fix-ctypes.patch:
  Update patch to fix ctypes.

  21 Feb 2014; Tim Harder <radhermit@gentoo.org> -python-iptables-0.2.0.ebuild,
  -python-iptables-0.3.0.ebuild, -python-iptables-0.3.0-r1.ebuild:
  Remove old.

*python-iptables-0.3.0-r2 (21 Feb 2014)

  21 Feb 2014; Tim Harder <radhermit@gentoo.org>
  +python-iptables-0.3.0-r2.ebuild, +files/python-iptables-fix-ctypes.patch:
  Fix argument and return types for various libiptc calls.

*python-iptables-0.3.0-r1 (04 Feb 2014)

  04 Feb 2014; Patrick McLean <chutzpah@gentoo.org>
  +python-iptables-0.3.0-r1.ebuild,
  +files/python-iptables-0.3.0-conntrack-fixes.patch:
  Revision bump, add patch from upstream to fix problems with conntrack.

*python-iptables-0.3.0 (03 Feb 2014)

  03 Feb 2014; Patrick McLean <chutzpah@gentoo.org>
  +python-iptables-0.3.0.ebuild:
  Version bump.

*python-iptables-0.2.0 (14 Nov 2013)

  14 Nov 2013; Patrick McLean <chutzpah@gentoo.org>
  +python-iptables-0.2.0.ebuild, +files/python-iptables-0.2.0-tests.patch,
  +metadata.xml:
  New package: python bindings for iptables
