@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-iptables
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-iptables/ChangeLog,v 1.7 2014/04/01 17:39:39 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-iptables/ChangeLog,v 1.8 2014/08/02 21:16:03 chutzpah Exp $
+
+*python-iptables-0.4.0 (02 Aug 2014)
+
+  02 Aug 2014; Patrick McLean <chutzpah@gentoo.org>
+  +python-iptables-0.4.0.ebuild:
+  Version bump.
 
 *python-iptables-0.3.0_p20130331 (01 Apr 2014)
 
